--- a/iree/compiler/Dialect/Shape/IR/CMakeLists.txt
+++ b/iree/compiler/Dialect/Shape/IR/CMakeLists.txt
@@ -12,6 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+add_subdirectory(test)
+
 iree_cc_library(
   NAME
     IR
@@ -38,12 +40,11 @@ iree_cc_library(
   PUBLIC
 )
 
-
 iree_tablegen_library(
   NAME
     ShapeOpsGen
   TD_FILE
-    ShapeOps.td
+    "ShapeOps.td"
   OUTS
     -gen-op-decls ShapeOps.h.inc
     -gen-op-defs ShapeOps.cpp.inc
