--- a/iree/modules/strings/dialect/CMakeLists.txt
+++ b/iree/modules/strings/dialect/CMakeLists.txt
@@ -12,6 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+add_subdirectory(test)
+
 iree_cc_library(
   NAME
     dialect
@@ -24,14 +26,15 @@ iree_cc_library(
     "strings_dialect.cc"
     "strings_ops.cc.inc"
   DEPS
+    ::strings_imports
+    iree::compiler::Dialect::IREE::IR
+    iree::compiler::Dialect::VM::Conversion
     LLVMSupport
     MLIRIR
     MLIRParser
     MLIRPass
     MLIRSupport
     MLIRTransforms
-    iree::compiler::Dialect::VM::Conversion
-    iree::modules::strings::dialect::strings_imports
   ALWAYSLINK
   PUBLIC
 )
@@ -40,7 +43,7 @@ iree_tablegen_library(
   NAME
     strings_ops_gen
   TD_FILE
-    strings_ops.td
+    "strings_ops.td"
   OUTS
     -gen-op-decls strings_ops.h.inc
     -gen-op-defs strings_ops.cc.inc
@@ -58,5 +61,24 @@ iree_cc_embed_data(
   CPP_NAMESPACE
     "mlir::iree_compiler::IREE::Strings"
   FLATTEN
+  PUBLIC
 )
 
+iree_cc_binary(
+  NAME
+    strings-opt
+  OUT
+    strings-opt
+  DEPS
+    ::dialect
+    iree::tools::iree_opt_library
+    MLIRMlirOptLib # main; TODO: swap with MLIROptMain
+)
+
+iree_cc_binary(
+  NAME
+    strings-translate
+  DEPS
+    ::dialect
+    iree::tools::iree_translate_library
+)
