--- a/.bazelrc
+++ b/.bazelrc
@@ -47,6 +47,28 @@ build --experimental_guard_against_concurrent_changes
 
 ###############################################################################
 
+# Android configs.
+
+# Android configs. Bazel needs to have --cpu and --fat_apk_cpu both set to the
+# target CPU to build transient dependencies correctly. See
+# https://docs.bazel.build/versions/master/user-manual.html#flag--fat_apk_cpu
+build:android --crosstool_top=//external:android/crosstool
+build:android --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
+build:android_arm --config=android
+build:android_arm --cpu=armeabi-v7a
+build:android_arm --fat_apk_cpu=armeabi-v7a
+build:android_arm64 --config=android
+build:android_arm64 --cpu=arm64-v8a
+build:android_arm64 --fat_apk_cpu=arm64-v8a
+build:android_x86 --config=android
+build:android_x86 --cpu=x86
+build:android_x86 --fat_apk_cpu=x86
+build:android_x86_64 --config=android
+build:android_x86_64 --cpu=x86_64
+build:android_x86_64 --fat_apk_cpu=x86_64
+
+###############################################################################
+
 # Options for connecting to the IREE GCP remote build project.
 
 # Enable authentication. This will pick up application default credentials by
@@ -153,7 +175,7 @@ build:windows --experimental_enable_runfiles
 # Some of these are also of general use and fine to enable globally for windows.
 build:windows --copt=/arch:AVX
 # Host and target are the same in windows so don't waste time building both.
-build:windows --distinct_host_configuration=false
+# build:windows --distinct_host_configuration=false
 # Avoids incompatible versions of winsock and other badness.
 build:windows --copt=/DWIN32_LEAN_AND_MEAN --host_copt=/DWIN32_LEAN_AND_MEAN
 # That is one way to have less warnings :(
