Planning for optimizations (Analysis pass on <ExecutableOp>).

--- a/iree/compiler/Dialect/Flow/Transforms/CMakeLists.txt
+++ b/iree/compiler/Dialect/Flow/Transforms/CMakeLists.txt
@@ -25,6 +25,7 @@ iree_cc_library(
     "DeduplicateExecutables.cpp"
     "DispatchConfig.cpp"
     "DispatchabilityAnalysis.cpp"
+    "FindDuplicateExecutables.cpp"
     "FlattenTuplesInCFG.cpp"
     "FoldCompatibleDispatchRegions.cpp"
     "FormStreams.cpp"
