Figuring out how Analysis works.

--- a/iree/compiler/Dialect/Flow/Transforms/CMakeLists.txt
+++ b/iree/compiler/Dialect/Flow/Transforms/CMakeLists.txt
@@ -21,6 +21,7 @@ iree_cc_library(
     "DispatchConfig.h"
     "Passes.h"
   SRCS
+    "ComputeExecutableHashes.cpp"
     "CreateFuncsToInvokeExecOps.cpp"
     "DeduplicateExecutables.cpp"
     "DispatchConfig.cpp"
