[WIP/Untested] Enable iree_llvmaot in integrations/tensorflow/ tests.

--- a/integrations/tensorflow/bindings/python/pyiree/tf/support/BUILD
+++ b/integrations/tensorflow/bindings/python/pyiree/tf/support/BUILD
@@ -60,6 +60,7 @@ iree_py_test(
     ],
     python_version = "PY3",
     tags = [
+        "driver=llvmaot",
         "driver=vmla",
     ],
     deps = INTREE_TENSORFLOW_PY_DEPS + [
